# cloc

./: README.md  cloc.cabal
app/: Main.hs
src/: Cloc.hs  TextPipes.hs
