name:           cloc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/cloc#readme>
homepage:       https://github.com/cronokirby/cloc#readme
bug-reports:    https://github.com/cronokirby/cloc/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cronokirby/cloc

library
  exposed-modules:
      Cloc
    , TextPipes
  other-modules:
      Paths_cloc
  hs-source-dirs:
      src
  build-depends:
      base       >= 4.7   && < 5
    , pipes      >= 4.3   && < 4.4
    , text       >= 1.2   && < 1.3
  default-language: Haskell2010

executable cloc-exe
  main-is: Main.hs
  other-modules:
      Paths_cloc
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cloc
  default-language: Haskell2010

test-suite cloc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cloc
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cloc
  default-language: Haskell2010
